tests/baselines/reference/unicodeExtendedEscapesInStrings25_ES5.errors.txt
tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings25_ES5.ts(1,28): error TS1002: Unterminated string literal.


==== tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings25_ES5.ts (1 errors) ====
    var x = "\u{00000000000067}
                               
!!! error TS1002: Unterminated string literal.
    